changes to visual fixes and upgrades on mobile view and show better user logged

--- a/frontend/src/styles/GraphsStyle.css
+++ b/frontend/src/styles/GraphsStyle.css
@@ -88,3 +88,9 @@
     align-items: center;
     margin: 5px;
 }
+
+@media (max-width: 768px) {
+    .dashboard-grid {
+    grid-template-columns: 1fr;
+    }
+}
